Feat: Implement Reconnect System & Device Fingerprinting (v3.0.0-alpha.6) - Implemented a full reconnect system for active games. Players now have 60 seconds to rejoin after a disconnect. - Integrated FingerprintJS to generate a stable device ID, linking it to user accounts in the database for reliable guest reconnects and future anti-cheat. - Added UI indicators for disconnected players (timer, dimmed avatar). - Fixed multiple race conditions and crashes related to i18n calls, socket state, and database transactions during the reconnect/disconnect cycle.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -206,5 +206,10 @@
   "back_to_main_menu": "Back to Menu",
   "loading": "Loading...",
   "refresh_list": "Refresh list",
-  "error_lobby_not_found": "Lobby not found or game already started."
+  "error_lobby_not_found": "Lobby not found or game already started.",
+  "log_player_disconnected": "{name} disconnected. Waiting for reconnect (60s)...",
+  "game_over_player_left_timeout": "Game over, {name} did not return.",
+  "log_player_reconnected": "{name} has reconnected!",
+  "error_reconnect_failed": "Failed to reconnect to the game. It may have already ended.",
+  "kick_player": "Kick Player"
 }
