Feat: Implement Passing Durak (Perevodnoy) Game Mode (v3.0.0-alpha.9) - Added 'gameMode' setting (Podkidnoy / Perevodnoy) to Lobby creation. - Implemented server-side logic for passing turn (transferring cards) in 'makeMove'. - Added UI indicators for game mode in Lobby Browser and Lobby Room. - Added translation keys for transfer actions and errors.

--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -210,5 +210,10 @@
   "game_over_player_left_timeout": "Игра окончена, так как {name} не вернулся.",
   "log_player_reconnected": "{name} вернулся в игру!",
   "error_reconnect_failed": "Не удалось вернуться в игру. Возможно, она уже закончилась.",
-  "kick_player": "Выгнать"
+  "kick_player": "Выгнать",
+  "game_mode_label": "Режим игры",
+  "game_mode_podkidnoy": "Подкидной",
+  "game_mode_perevodnoy": "Переводной",
+  "log_transfer": "🔄 {name} перевел ход на {nextPlayer}!",
+  "error_transfer_not_enough_cards": "⚠️ Нельзя перевести: у следующего игрока мало карт."
 }
