--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -210,5 +210,10 @@
   "game_over_player_left_timeout": "Гра завершена, оскільки {name} не повернувся.",
   "log_player_reconnected": "{name} повернувся в гру!",
   "error_reconnect_failed": "Не вдалося повернутися в гру. Можливо, вона вже закінчилася.",
-  "kick_player": "Вигнати"
+  "kick_player": "Вигнати",
+  "game_mode_label": "Режим гри",
+  "game_mode_podkidnoy": "Підкидний",
+  "game_mode_perevodnoy": "Перевідний",
+  "log_transfer": "🔄 {name} перевів хід на {nextPlayer}!",
+  "error_transfer_not_enough_cards": "⚠️ Не можна перевести: у наступного гравця мало карт."
 }
