--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -211,5 +211,10 @@
   "game_over_player_left_timeout": "Game over, {name} did not return.",
   "log_player_reconnected": "{name} has reconnected!",
   "error_reconnect_failed": "Failed to reconnect to the game. It may have already ended.",
-  "kick_player": "Kick Player"
+  "kick_player": "Kick Player",
+  "game_mode_label": "Game Mode",
+  "game_mode_podkidnoy": "Throw-in",
+  "game_mode_perevodnoy": "Passing",
+  "log_transfer": "🔄 {name} transferred turn to {nextPlayer}!",
+  "error_transfer_not_enough_cards": "⚠️ Cannot transfer: next player has too few cards."
 }
