--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -215,5 +215,12 @@
   "game_mode_podkidnoy": "Подкидной",
   "game_mode_perevodnoy": "Переводной",
   "log_transfer": "🔄 {name} перевел ход на {nextPlayer}!",
-  "error_transfer_not_enough_cards": "⚠️ Нельзя перевести: у следующего игрока мало карт."
+  "error_transfer_not_enough_cards": "⚠️ Нельзя перевести: у следующего игрока мало карт.",
+  "time_limit_label":"Время на ход",
+  "time_15s":"15 секунд (Блиц)",
+  "time_30s":"30 секунд",
+  "time_60s":"60 секунд",
+  "time_unlimited":"Без ограничений",
+  "log_timeout_pass":"⏰ Время вышло! {name} пропускает ход.",
+  "log_timeout_take":"⏰ Время вышло! {name} забирает карты."
 }
