--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -215,5 +215,12 @@
   "game_mode_podkidnoy": "Підкидний",
   "game_mode_perevodnoy": "Перевідний",
   "log_transfer": "🔄 {name} перевів хід на {nextPlayer}!",
-  "error_transfer_not_enough_cards": "⚠️ Не можна перевести: у наступного гравця мало карт."
+  "error_transfer_not_enough_cards": "⚠️ Не можна перевести: у наступного гравця мало карт.",
+  "time_limit_label": "Час на хід",
+  "time_15s": "15 секунд (Бліц)",
+  "time_30s": "30 секунд",
+  "time_60s": "60 секунд",
+  "time_unlimited": "Без обмежень",
+  "log_timeout_pass": "⏰ Час вийшов! {name} пропускає хід.",
+  "log_timeout_take": "⏰ Час вийшов! {name} забирає карти."
 }
