Feat: Implement AI Bots with multiple difficulty levels (v3.0.0-alpha.11) - Added AI bots with 6 difficulty levels (from 'Child' to 'Impossible'). - Players can now add bots to lobbies via the UI. - Implemented server-side logic for bot turns with emulated thinking time. - Games with bots do not affect player ratings. - Added UI indicators to distinguish bots from human players in the lobby.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -223,5 +223,7 @@
   "time_60s": "60 seconds",
   "time_unlimited": "Unlimited",
   "log_timeout_pass": "⏰ Time's up! {name} passes.",
-  "log_timeout_take": "⏰ Time's up! {name} takes cards."
+  "log_timeout_take": "⏰ Time's up! {name} takes cards.",
+  "your_time": "Your Time",
+  "opponent_time": "Opponent's Time"
 }
