Feat: Implement Global Chat with Moderation (v3.0.0-alpha.12) - Added a real-time Global Chat to the Lobby Browser page. - Implemented server-side logic for message history, pagination, and spam protection (progressive cooldown). - Users can now edit and delete their own messages within a time limit. - Admins have the ability to delete any message. - The chat UI is adaptive, with a modal window for mobile devices.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -33,7 +33,7 @@
   "placeholder_name": "Enter name...",
   "placeholder_username": "Your nickname",
   "placeholder_password": "•••••••",
-  "chat_placeholder": "Message...",
+  "chat_placeholder": "Type a message...",
   "chat_title": "Log / Chat",
   "chat_empty": "Game history will appear here...",
   "chat_new_messages": "New messages",
@@ -225,5 +225,26 @@
   "log_timeout_pass": "⏰ Time's up! {name} passes.",
   "log_timeout_take": "⏰ Time's up! {name} takes cards.",
   "your_time": "Your Time",
-  "opponent_time": "Opponent's Time"
+  "opponent_time": "Opponent's Time",
+  "confirm_text": "Yes",
+  "cancel_text": "No",
+  "global_chat_title": "Global Chat",
+  "chat_login_prompt": "Log in to join the chat.",
+  "load_more": "Load More",
+  "loading_more": "Loading",
+  "error_chat_auth_required": "⚠️ Login required to chat.",
+  "error_chat_muted": "🔇 You are muted in chat.",
+  "error_chat_spam_wait": "Too fast! Please wait {seconds} seconds.",
+  "close_chat_button": "Close Chat",
+  "edited_tag": "(edited)",
+  "save_button": "Save",
+  "cancel_button": "Cancel",
+  "edit_message": "Edit message",
+  "delete_message": "Delete message",
+  "delete_message_admin": "Delete (Admin)",
+  "error_edit_time_expired": "Time to edit has expired.",
+  "error_delete_time_expired": "Time to delete has expired.",
+  "delete_confirm_title": "Confirm Deletion",
+  "delete_confirm_message": "Are you sure you want to delete this message?",
+  "delete_button": "Delete"
 }
