--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -33,7 +33,7 @@
   "placeholder_name": "Введите имя...",
   "placeholder_username": "Ваш никнейм",
   "placeholder_password": "•••••••",
-  "chat_placeholder": "Сообщение...",
+  "chat_placeholder": "Напишите сообщение...",
   "chat_title": "Лог / Чат",
   "chat_empty": "История игры появится здесь...",
   "chat_new_messages": "Новые сообщения",
@@ -224,5 +224,26 @@
   "log_timeout_pass":"⏰ Время вышло! {name} пропускает ход.",
   "log_timeout_take":"⏰ Время вышло! {name} забирает карты.",
   "your_time": "Ваше время",
-  "opponent_time": "Время соперника"
+  "opponent_time": "Время соперника",
+  "confirm_text": "Да",
+  "cancel_text": "Нет",
+  "global_chat_title": "Глобальный чат",
+  "chat_login_prompt": "Войдите, чтобы общаться в чате.",
+  "load_more": "Загрузить ещё",
+  "loading_more": "Загрузка",
+  "error_chat_auth_required": "⚠️ Требуется авторизация для чата.",
+  "error_chat_muted": "🔇 Ваш чат заблокирован.",
+  "error_chat_spam_wait": "Слишком часто! Подождите {seconds} сек.",
+  "close_chat_button": "Закрыть чат",
+  "edited_tag": "(ред.)",
+  "save_button": "Сохранить",
+  "cancel_button": "Отмена",
+  "edit_message": "Редактировать сообщение",
+  "delete_message": "Удалить сообщение",
+  "delete_message_admin": "Удалить (Админ)",
+  "error_edit_time_expired": "Время для редактирования истекло.",
+  "error_delete_time_expired": "Время для удаления истекло.",
+  "delete_confirm_title": "Подтвердить удаление",
+  "delete_confirm_message": "Вы уверены, что хотите удалить это сообщение?",
+  "delete_button": "Удалить"
 }
