--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -33,7 +33,7 @@
   "placeholder_name": "Введіть ім'я...",
   "placeholder_username": "Ваш нікнейм",
   "placeholder_password": "•••••••",
-  "chat_placeholder": "Повідомлення...",
+  "chat_placeholder": "Напишіть повідомлення...",
   "chat_title": "Журнал / Чат",
   "chat_empty": "Тут буде історія гри...",
   "chat_new_messages": "Нові повідомлення",
@@ -224,5 +224,26 @@
   "log_timeout_pass": "⏰ Час вийшов! {name} пропускає хід.",
   "log_timeout_take": "⏰ Час вийшов! {name} забирає карти.",
   "your_time": "Ваш час",
-  "opponent_time": "Час суперника"
+  "opponent_time": "Час суперника",
+  "confirm_text": "Так",
+  "cancel_text": "Ні",
+  "global_chat_title": "Глобальний чат",
+  "chat_login_prompt": "Увійдіть, щоб спілкуватися в чаті.",
+  "load_more": "Завантажити ще",
+  "loading_more": "Завантаження",
+  "error_chat_auth_required": "⚠️ Потрібна авторизація для чату.",
+  "error_chat_muted": "🔇 Ваш чат заблоковано.",
+  "error_chat_spam_wait": "Занадто часто! Зачекайте {seconds} сек.",
+  "close_chat_button": "Закрити чат",
+  "edited_tag": "(ред.)",
+  "save_button": "Зберегти",
+  "cancel_button": "Скасувати",
+  "edit_message": "Редагувати повідомлення",
+  "delete_message": "Видалити повідомлення",
+  "delete_message_admin": "Видалити (Адмін)",
+  "error_edit_time_expired": "Час для редагування вийшов.",
+  "error_delete_time_expired": "Час для видалення вийшов.",
+  "delete_confirm_title": "Підтвердити видалення",
+  "delete_confirm_message": "Ви впевнені, що хочете видалити це повідомлення?",
+  "delete_button": "Видалити"
 }
