feat: Add a new status view displaying application health and activity metrics, and integrate Telegram bot service with internationalization support.

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -246,5 +246,38 @@
   "error_delete_time_expired": "Time to delete has expired.",
   "delete_confirm_title": "Confirm Deletion",
   "delete_confirm_message": "Are you sure you want to delete this message?",
-  "delete_button": "Delete"
+  "delete_button": "Delete",
+  "status_page_title": "Durak Online",
+  "status_page_subtitle": "Real-Time Server Monitoring",
+  "status_server_running": "Server Running",
+  "status_server_issues": "Server Issues",
+  "status_loading": "Loading data...",
+  "status_error_title": "Error",
+  "status_try_again": "Try Again",
+  "status_refresh": "Refresh",
+  "status_last_update": "Last update",
+  "status_card_app_info": "Application Info",
+  "status_version": "Version",
+  "status_environment": "Environment",
+  "status_uptime": "Uptime",
+  "status_card_activity": "Online Activity",
+  "status_users_online": "Users online",
+  "status_sessions_total": "Total sessions",
+  "status_players_in_game": "Players in matches",
+  "status_card_games": "Games",
+  "status_games_in_progress": "Games in progress",
+  "status_lobbies_waiting": "Lobbies waiting",
+  "status_public_lobbies": "Public lobbies",
+  "status_private_lobbies": "Private lobbies",
+  "status_bot_games": "Bot games",
+  "status_card_daily": "Today's Statistics",
+  "status_date": "Date",
+  "status_registrations_today": "New registrations",
+  "status_games_played_today": "Games played",
+  "status_card_system": "System",
+  "status_memory": "Memory (RSS)",
+  "status_node_version": "Node.js version",
+  "status_db_ping": "DB ping",
+  "status_card_timestamp": "Timestamp",
+  "status_server_time": "Server time"
 }
