--- a/client/src/locales/ru.json
+++ b/client/src/locales/ru.json
@@ -216,13 +216,13 @@
   "game_mode_perevodnoy": "Переводной",
   "log_transfer": "🔄 {name} перевел ход на {nextPlayer}!",
   "error_transfer_not_enough_cards": "⚠️ Нельзя перевести: у следующего игрока мало карт.",
-  "time_limit_label":"Время на ход",
-  "time_15s":"15 секунд (Блиц)",
-  "time_30s":"30 секунд",
-  "time_60s":"60 секунд",
-  "time_unlimited":"Без ограничений",
-  "log_timeout_pass":"⏰ Время вышло! {name} пропускает ход.",
-  "log_timeout_take":"⏰ Время вышло! {name} забирает карты.",
+  "time_limit_label": "Время на ход",
+  "time_15s": "15 секунд (Блиц)",
+  "time_30s": "30 секунд",
+  "time_60s": "60 секунд",
+  "time_unlimited": "Без ограничений",
+  "log_timeout_pass": "⏰ Время вышло! {name} пропускает ход.",
+  "log_timeout_take": "⏰ Время вышло! {name} забирает карты.",
   "your_time": "Ваше время",
   "opponent_time": "Время соперника",
   "confirm_text": "Да",
@@ -245,5 +245,38 @@
   "error_delete_time_expired": "Время для удаления истекло.",
   "delete_confirm_title": "Подтвердить удаление",
   "delete_confirm_message": "Вы уверены, что хотите удалить это сообщение?",
-  "delete_button": "Удалить"
+  "delete_button": "Удалить",
+  "status_page_title": "Durak Online",
+  "status_page_subtitle": "Мониторинг Сервера в Реальном Времени",
+  "status_server_running": "Сервер Работает",
+  "status_server_issues": "Проблемы с Сервером",
+  "status_loading": "Загрузка данных...",
+  "status_error_title": "Ошибка",
+  "status_try_again": "Попробовать снова",
+  "status_refresh": "Обновить",
+  "status_last_update": "Последнее обновление",
+  "status_card_app_info": "Информация о Приложении",
+  "status_version": "Версия",
+  "status_environment": "Окружение",
+  "status_uptime": "Время работы",
+  "status_card_activity": "Активность Онлайн",
+  "status_users_online": "Пользователей онлайн",
+  "status_sessions_total": "Всего сессий",
+  "status_players_in_game": "Игроков в матчах",
+  "status_card_games": "Игры",
+  "status_games_in_progress": "Игр в процессе",
+  "status_lobbies_waiting": "Лобби ожидают",
+  "status_public_lobbies": "Публичные лобби",
+  "status_private_lobbies": "Приватные лобби",
+  "status_bot_games": "Игры с ботами",
+  "status_card_daily": "Статистика за Сегодня",
+  "status_date": "Дата",
+  "status_registrations_today": "Новых регистраций",
+  "status_games_played_today": "Игр сыграно",
+  "status_card_system": "Система",
+  "status_memory": "Память (RSS)",
+  "status_node_version": "Node.js версия",
+  "status_db_ping": "Пинг БД",
+  "status_card_timestamp": "Временная Метка",
+  "status_server_time": "Время сервера"
 }
