--- a/client/src/locales/uk.json
+++ b/client/src/locales/uk.json
@@ -245,5 +245,38 @@
   "error_delete_time_expired": "Час для видалення вийшов.",
   "delete_confirm_title": "Підтвердити видалення",
   "delete_confirm_message": "Ви впевнені, що хочете видалити це повідомлення?",
-  "delete_button": "Видалити"
+  "delete_button": "Видалити",
+  "status_page_title": "Durak Online",
+  "status_page_subtitle": "Моніторинг Сервера в Реальному Часі",
+  "status_server_running": "Сервер Працює",
+  "status_server_issues": "Проблеми з Сервером",
+  "status_loading": "Завантаження даних...",
+  "status_error_title": "Помилка",
+  "status_try_again": "Спробувати ще раз",
+  "status_refresh": "Оновити",
+  "status_last_update": "Останнє оновлення",
+  "status_card_app_info": "Інформація про Додаток",
+  "status_version": "Версія",
+  "status_environment": "Оточення",
+  "status_uptime": "Час роботи",
+  "status_card_activity": "Активність Онлайн",
+  "status_users_online": "Користувачів онлайн",
+  "status_sessions_total": "Всього сесій",
+  "status_players_in_game": "Гравців у матчах",
+  "status_card_games": "Ігри",
+  "status_games_in_progress": "Ігор у процесі",
+  "status_lobbies_waiting": "Лобі очікують",
+  "status_public_lobbies": "Публічні лобі",
+  "status_private_lobbies": "Приватні лобі",
+  "status_bot_games": "Ігри з ботами",
+  "status_card_daily": "Статистика за Сьогодні",
+  "status_date": "Дата",
+  "status_registrations_today": "Нових реєстрацій",
+  "status_games_played_today": "Ігор зіграно",
+  "status_card_system": "Система",
+  "status_memory": "Пам'ять (RSS)",
+  "status_node_version": "Node.js версія",
+  "status_db_ping": "Пінг БД",
+  "status_card_timestamp": "Часова Мітка",
+  "status_server_time": "Час сервера"
 }
